# KPTData2Plot

./: package-lock.json  package.json  temp.md
.github/workflows/: build.yaml
src/: App.vue  Rules.ts  main.ts  plot.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: ColorPickDialog.vue  CurveConfigPanel.vue  PlotConfigPanel.vue
